testing/macro-tests/tests/ui/generated_requires_many_ulid.stderr
error: generated(insert = ...) currently supports only single-value fields
  --> tests/ui/generated_requires_many_ulid.rs:20:21
   |
20 |             ident = "tokens",
   |                     ^^^^^^^^
